# dotprompt

./: .gitignore  .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  DOTPROMPT_PARITY.md  MODULE.bazel  README.md  biome.json  captainhook.json  dart.MODULE.bazel  dart.bazelrc  go.MODULE.bazel  java.MODULE.bazel  maven_install.json  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust.MODULE.bazel  ts.MODULE.bazel
.github/: labeler.yml
.github/workflows/: bazel.yml  dart.yml  deploy.yml  engdoc.yml  flutter.yml  go.yml  golangci-lint.yml  handlebarrz-tests.yml  ide_plugins.yml  java.yml  js.yml  promptly-npm.yml  publish_dotpromptz_package.yml  publish_handlebarrz.yml  publish_handlebarrz_package.yml  publish_java.yml  publish_python_dotpromptz_package.yml  publish_python_handlebarrz_package.yml  publish_python_package.yml  publish_rust.yml  publish_rust_package.yml  python.yml  release-please.yml  release.yml  rules_dart.yml  rules_dart_rbe.yml  rust.yml  smoke-test-wheels.yml  todo-check.yml  treesitter.yml  validate-release-please-config.yml  vscode_extension.yml  vscode_publish.yml  web_editors.yml
bazel/dart/: defs.bzl
bazel/java/: defs.bzl
bazel/rules_dart/: CHANGELOG.md  GEMINI.md  README.md  defs.bzl  deps.bzl  extensions.bzl  repositories.bzl
bazel/rules_dart/.bcr/: metadata.json
bazel/rules_dart/gazelle/: go.mod
bazel/rules_dart/gazelle/language/: lang.go
bazel/rules_dart/gazelle/pubspec/: types.go
bazel/rules_dart/private/: BUILD.bazel
bazel/rules_flutter/: CHANGELOG.md
bazel/rules_flutter/gazelle/: go.mod
dart/: pubspec.yaml
dart/dotprompt/: BUILD.bazel  CHANGELOG.md  PARITY.md  analysis_options.yaml  pubspec.yaml
dart/dotprompt/lib/: dotprompt.dart
dart/dotprompt/lib/src/: dotprompt.dart  equality.dart  error.dart  parse.dart  picoschema.dart  store.dart  types.dart  util.dart
dart/dotprompt/test/: BUILD.bazel  dotprompt_test.dart  parse_test.dart  picoschema_test.dart  spec_test.dart  types_test.dart  util_test.dart
dart/handlebarrz/: BUILD.bazel  pubspec.yaml
dart/handlebarrz/lib/: handlebarrz.dart
dart/handlebarrz/lib/src/: handlebars.dart  lexer.dart  options.dart  parser.dart  runtime.dart  template.dart
dart/handlebarrz/test/: BUILD.bazel  handlebars_test.dart
dart/handlebars_dart/: BUILD.bazel  CHANGELOG.md  FEATURES.md  README.md  pubspec.yaml
dart/handlebars_dart/lib/: handlebars_dart.dart
dart/handlebars_dart/lib/src/: handlebars.dart  (+5 more)
dart/handlebars_dart/test/: antlr_parser_test.dart  handlebars_test.dart
docs/: index.md
docs/contributing/: coding_guidelines.md  git_workflow.md  index.md  packagin_rust.md
docs/design/: antlr-parser.md  promptly.md
docs/extending/: index.md
examples/: autocomplete.prompt  error-invalid-yaml.prompt  error-multiple-issues.prompt  error-unbalanced-brace.prompt  error-unclosed-block.prompt  error-unmatched-closing-block.prompt  features.prompt  partials.prompt  valid-blog-generator.prompt  valid-comments-and-partials.prompt  valid-customer-support.prompt  valid-greeting.prompt  warning-undefined-variable.prompt  warning-unused-variable.prompt
examples/partials/: circular-partial-a.prompt  circular-partial-b.prompt
go/: CHANGELOG.md  README.md  go.mod  go.sum  spec_test.go
go/dotprompt/: BUILD.bazel  doc.go  dotprompt.go  helper.go  helper_test.go  parse.go  parse_test.go  picoschema.go  picoschema_test.go  schema.go  serialize.go  serialize_test.go  types.go  util.go  util_test.go  utils.go
go/dotprompt/test/: spec_test.go
go/example/: doc.md  example.prompt
go/spec/: metadata.yaml
java/: CHANGELOG.md  CODING_GUIDELINES.md  PLAN.md  README.md
java/com/google/dotprompt/: BUILD.bazel  Dotprompt.java  DotpromptOptions.java  DotpromptOptionsTest.java  DotpromptTest.java  Helpers.java  HelpersTest.java  PromptLoader.java  PromptLoaderTest.java  SpecTest.java  package-info.java
java/com/google/dotprompt/models/: BUILD.bazel  PaginatedPartials.java  PaginatedPrompts.java  ParsedPrompt.java  PromptMetadata.java  PromptMetadataTest.java
java/com/google/dotprompt/parser/: Parser.java  ParserTest.java  PicoschemaTest.java
java/com/google/dotprompt/smoke/: KotlinSmokeTest.kt  SmokeTest.java
java/com/google/dotprompt/store/: BUILD.bazel
js/: CHANGELOG.md  README.md  package-lock.json  package.json  vitest.config.mts  vitest.config.ts
js/examples/: adapters.ts
js/src/: dotprompt.test.ts  dotprompt.ts  environment.ts  handlebars-cjs.d.ts  helpers.test.ts  helpers.ts  parse.test.ts  parse.ts  picoschema.test.ts  picoschema.ts
js/src/adapters/: gemini.ts
js/src/stores/: dir.ts
js/test/: spec.test.ts
python/: .pysentry.toml  pyproject.toml  requirements.txt
python/dotpromptz/: CHANGELOG.md  README.md  pyproject.toml  types.py
python/dotpromptz/src/: handlebars_test.py  helpers.py  parse.py  util.py
python/handlebarrz/: CHANGELOG.md  Cargo.toml  README.md  dockerfile-arm64  dockerfile-x86-64  generate-arm-wheels.sh  generate-x86-64-wheels.sh  pyproject.toml
python/handlebarrz/smoke_tests/: Dockerfile_debian  Dockerfile_redhat  Dockerfile_redhat_arm64  handlebarrz_test.py  pyproject.toml
python/handlebarrz/src/: lib.rs
python/handlebarrz/tests/: advanced_features_test.py  escape_test.py  helpers_test.py  partials_test.py  subexpression_test.py  template_core_test.py  template_test.py
python/samples/streamlit-monaco-demo/: app.py
python/tests/smoke/: js2py.pyi  package_test.py  pyproject.toml
rs/: CHANGELOG.md  PLAN.md
rs/dotprompt/: BUILD.bazel  Cargo.toml  README.md
rs/dotprompt-cli/: BUILD.bazel  Cargo.toml  README.md
rs/dotprompt-cli/src/: cli.rs  main.rs
rs/dotprompt/src/: dotprompt.rs  lib.rs  parse.rs  types.rs  typesc.rs  typesg.rs
rs/promptly/src/: formatter.rs  linter.rs  lsp.rs
rs/promptly/tests/: cli_tests.rs
rs/smoke/: Cargo.toml
scripts/: fmt  format_go_files  generate_handlebars_parser  publish-java.sh  run_go_tests  run_python_tests
site/: package-lock.json
spec/: partials.yaml  unicode.yaml  variables.yaml
spec/handlebars/antlr/: README.md
spec/helpers/: role_metadata.yaml
(+49 files in other folders)
