# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

"""Configuration for Bazel with Dart dependencies.

This module provides Dart SDK configuration for the Dotprompt Dart implementation.
The Dart SDK is automatically downloaded from Google's official CDN, similar to
how rules_go and rules_rust fetch their respective toolchains.

Dart SDK Installation:
- The SDK is downloaded from: https://storage.googleapis.com/dart-archive/
- Supported platforms: linux-x64, linux-arm64, macos-x64, macos-arm64, windows-x64
- Version: 3.7.0 (configurable via the dart.configure tag)
"""

# Use the Dart module extension to download the SDK
dart = use_extension("//bazel/rules_dart:extensions.bzl", "dart")

# Configure the SDK (optional - uses default version if not specified)
dart.configure()

# Make the dart_sdk repository available
use_repo(dart, "dart_sdk")
