# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

ENV = {
    # These environment variables are typically set by Cargo and are used by macros
    # like `crate_version!`, `crate_authors!`, etc.
    "CARGO_PKG_AUTHORS": "Yesudeep Mangalapilly <yesudeep@google.com>",
    "CARGO_PKG_DESCRIPTION": "Renders Dotprompt templates (with associated helpers and partials) into a Common Model Interface.",
    "CARGO_PKG_NAME": "dotprompt",
    "CARGO_PKG_VERSION": "0.1.0",
}

filegroup(
    name = "docs",
    srcs = glob([
        "**/*.md",
    ]),
)

rust_library(
    name = "dotprompt",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    compile_data = [":docs"],
    crate_name = "dotprompt",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "dotprompt_test",
    size = "small",
    srcs = glob(
        ["src/**/*.rs"],
    ),
    compile_data = [":docs"],
    env = ENV,
    deps = [
        ":dotprompt",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)
