[package]
authors     = ["Yesudeep Mangalapilly <yesudeep@google.com>"]
categories  = ["text-processing", "template-engine"]
description = "Rust implementation for dotprompt."
edition     = "2024"
keywords    = ["prompt", "template", "ai"]
license     = "Apache-2.0"
name        = "dotprompt"
readme      = "README.md"
repository  = "https://github.com/google/dotprompt"
version     = "0.1.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
