[project]
authors = [{ name = "Yesudeep Mangalapilly", email = "yesudeep@google.com" }]
name = "handlebarrz-smoke-tests"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
  "handlebarrz>=0.1.5"
] 

[tool.uv.sources]
handlebarrz = { index = "testpypi" }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true 
