# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@rules_java//java:defs.bzl", "java_library", "java_test")
load("@rules_jvm_external//:defs.bzl", "java_export")

java_library(
    name = "dotprompt",
    srcs = [
        "Dotprompt.java",
        "Helpers.java",
        "PromptLoader.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//java/com/google/dotprompt/models",
        "//java/com/google/dotprompt/parser",
        "//java/com/google/dotprompt/resolvers",
        "//java/com/google/dotprompt/store",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
        "@maven//:com_github_jknack_handlebars",
        "@maven//:com_google_guava_guava",
    ],
)

java_export(
    name = "dotprompt_pkg",
    maven_coordinates = "com.google.dotprompt:dotprompt:0.1.0",
    pom_template = "pom_template.xml",
    visibility = ["//visibility:public"],
    runtime_deps = [":dotprompt"],
)

java_test(
    name = "DotpromptTest",
    srcs = ["DotpromptTest.java"],
    test_class = "com.google.dotprompt.DotpromptTest",
    deps = [
        ":dotprompt",
        "//java/com/google/dotprompt/models",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "SpecTest",
    srcs = ["SpecTest.java"],
    data = ["//spec"],
    test_class = "com.google.dotprompt.SpecTest",
    deps = [
        ":dotprompt",
        "//java/com/google/dotprompt/models",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "PromptLoaderTest",
    srcs = ["PromptLoaderTest.java"],
    test_class = "com.google.dotprompt.PromptLoaderTest",
    deps = [
        ":dotprompt",
        "//java/com/google/dotprompt/models",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "HelpersTest",
    srcs = ["HelpersTest.java"],
    test_class = "com.google.dotprompt.HelpersTest",
    deps = [
        ":dotprompt",
        "//java/com/google/dotprompt/models",
        "@maven//:com_github_jknack_handlebars",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
